# ParallelProgramming

./: .gitignore  CMakeLists.txt  IOtoFile.cpp  Report.md  file_handler.py  main.cpp  main.py  matrixGen.cpp  matrixMultiply.cpp  requirements.txt
files/: output.txt
tests/: test_multiply.py
